syntax = "proto3";

import public "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "io.schemas";
option java_outer_classname = "GreeterServiceProto";

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
  google.protobuf.Timestamp timestamp = 2;
}

service GreeterService {
  rpc SayHello(HelloRequest) returns (HelloReply) {};

  rpc ItKeepsTalking(stream HelloRequest) returns (HelloReply) {};

  rpc ItKeepsReplying(HelloRequest) returns (stream HelloReply) {};

  rpc streamHellos(stream HelloRequest) returns (stream HelloReply) {};
}

